Working /weather/current for San Fran, CA

--- a/app/views/weather/current.html.erb
+++ b/app/views/weather/current.html.erb
@@ -1,2 +1,2 @@
-<h1>Weather#current</h1>
-<p>Find me in app/views/weather/current.html.erb</p>
+<h1>Weather in San Francisco, California</h1>
+<p><%= @current_weather %></p>
