--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,6 @@
 
   <body>
     <%= yield %>
-    <%= image_tag 'wundergroundLogo_4c_horz', id: 'weather_underground_logo' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
