--- a/app/views/weather/home.html.erb
+++ b/app/views/weather/home.html.erb
@@ -1,1 +1,7 @@
 <h1>Weather on Rails</h1>
+
+<%= form_for :weather, url: { action: 'current' }, method: :get do |f| %>
+    <%= f.label :location %>
+    <%= f.text_field :location %>
+    <button type="submit" class="btn btn-default">Submit</button>
+<% end %>
