Added title link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= link_to root_path do %><h1>Weather on Rails</h1><% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
